@startuml

skinparam componentStyle uml2

package "'Motorista' Aggregate" <<Rectangle>> {
	class Motorista <<(A,#fffab8) Aggregate Root>> {
		String nomeMotorista
		IdUsuario usuarioMotorista
		IdMotorista idMotorista
		List<IdVeiculo> veiculos
		List<IdAgendamento> historicoDeUso
	}
	class IdMotorista <<(V,DarkSeaGreen) Value Object>> {
		int idMotorista
	}
	class AlteracoesContaMotorista <<(S,DarkSeaGreen) Service>> {
		int deletarConta(IdUsuario usuarioMotorista)
		int alterarNomeMotorista(String novoNome)
	}
}
package "'Veiculo' Aggregate" <<Rectangle>> {
	class Veiculo <<(A,#fffab8) Aggregate Root>> {
		String nomeVeiculo
		String placaVeiculo
		IdMotorista motorista
		IdVeiculo idVeiculo
		List<IdAgendamento> historicoDeUso
	}
	class IdVeiculo <<(V,DarkSeaGreen) Value Object>> {
		int idVeiculo
	}
	class VeiculoService <<(S,DarkSeaGreen) Service>> {
	}
	class AlteracoesVeiculo <<(S,DarkSeaGreen) Service>> {
		int adicionarVeiculo(String placaVeiculo, String nomeVeiculo)
		int deletarVeiculo(Veiculo veiculo)
		int alterarNomeVeiculo(String novoNome)
		int alterarPlacaVeiculo(String novaPlaca)
	}
}
Veiculo --> IdVeiculo : idVeiculo
Motorista --> IdMotorista : idMotorista
Veiculo --> IdMotorista : motorista
Motorista "1" o--> "*" IdVeiculo : veiculos
legend left
  This bounded context implements the subdomain 'CadastroEControleDeMotoristasDomain'.
end legend


@enduml
